@@ -1,3 +1,9 @@
+2007-06-05  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/tiff-load.c
+	* plug-ins/common/tiff-save.c: Implement the proposed scheme for
+	storing international path names in TIFF files.
+
 2007-06-05  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/helpbrowser/dialog.c
